Use test environment for es tests

--- a/colplus-ws/src/test/resources/config-test.yaml
+++ b/colplus-ws/src/test/resources/config-test.yaml
@@ -37,8 +37,9 @@ client:
     verifyHostname: false
     trustSelfSignedCertificates: true
 es:
-  hosts:
+  hosts: localhost
   ports: 9200
+  environment: test
   nameUsage:
 auth:
   type: map
