--- a/colplus-ws/src/main/resources/config.yaml
+++ b/colplus-ws/src/main/resources/config.yaml
@@ -29,6 +29,7 @@ client:
 es:
   hosts: ${es.hosts}
   ports: ${es.ports}
+  environment: local
   nameUsage:
     modelClass: life.catalogue.es.model.EsNameUsage
 auth:
