fix some tests, Include manuscript names in sync, fixes #269

--- a/colplus-ws/src/test/resources/config-test.yaml
+++ b/colplus-ws/src/test/resources/config-test.yaml
@@ -37,8 +37,8 @@ client:
     verifyHostname: false
     trustSelfSignedCertificates: true
 es:
-  hosts: localhost
-  ports: 9200
+  hosts: ${es.hosts}
+  ports: ${es.ports}
   environment: test
   nameUsage:
     numShards: 1
