--- a/colplus-dao/src/main/resources/life/catalogue/es/ddl/es-settings.json
+++ b/colplus-dao/src/main/resources/life/catalogue/es/ddl/es-settings.json
@@ -2,7 +2,7 @@
 	"settings": {
 		"index": {
 			"refresh_interval": -1,
-			"max_result_window": 50000
+			"max_result_window": 2000000
 		},
 		"analysis": {
 			"analyzer": {
