--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 **/target
 **/.idea
 
-colplus-dao/127.0.0.1/
-colplus-dao/dataset/
-colplus-ws/graphs/
-colplus-ws/localhost/
+dao/127.0.0.1/
+dao/dataset/
+webservice/graphs/
+webservice/localhost/
 
 **/.DS_Store
 **/.project
