--- a/webservice/src/main/resources/config.yaml
+++ b/webservice/src/main/resources/config.yaml
@@ -38,10 +38,10 @@ auth:
   users:
     - username: user
       password: test
-      role: user
     - username: editor
       password: test
       role: editor
+      datasets: [1,2,3,1000]
     - username: admin
       password: test
       role: admin
