Adds a new API method to retrieve the latest release of a project and a new DatasetKeyRequestFilter that allows to use LR as a suffix for a project instead of the datasetkey for the latest release. Fixes #694

--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -214,7 +214,11 @@
             <artifactId>commons-text</artifactId>
         </dependency>
 
-		<!-- other -->
+        <!-- other -->
+        <dependency>
+          <groupId>com.github.ben-manes.caffeine</groupId>
+          <artifactId>caffeine</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
