--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <mainClass>life.catalogue.WsServer</mainClass>
+        <swagger.version>2.1.2</swagger.version>
     </properties>
 
     <dependencies>
@@ -75,7 +76,14 @@
             <artifactId>jersey-server</artifactId>
         </dependency>
 
-		<!-- col & gbif -->
+      <!-- Swagger OpenAPI Docs -->
+      <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-jaxrs2</artifactId>
+        <version>${swagger.version}</version>
+      </dependency>
+
+        <!-- col & gbif -->
         <dependency>
             <groupId>org.catalogueoflife</groupId>
             <artifactId>api</artifactId>
