Use custom swagger reader to remove Auth bodies

--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -82,6 +82,16 @@
         <artifactId>swagger-jaxrs2</artifactId>
         <version>${swagger.version}</version>
       </dependency>
+      <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-core</artifactId>
+        <version>${swagger.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-models</artifactId>
+        <version>${swagger.version}</version>
+      </dependency>
 
         <!-- col & gbif -->
         <dependency>
