--- a/webservice/src/main/resources/config.yaml
+++ b/webservice/src/main/resources/config.yaml
@@ -1,9 +1,9 @@
 logging:
   level: INFO
   loggers:
-    "life.catalogue": DEBUG
     "org.apache.http": WARN
     "org.eclipse.jetty.servlet": WARN
+    "life.catalogue": INFO
     "life.catalogue.db.mapper": DEBUG
   appenders:
     - type: console
