--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <commons-compress.version>1.19</commons-compress.version>
         <commons-io.version>2.6</commons-io.version>
         <dropwizard.version>2.0.2</dropwizard.version>
-        <dwc-api.version>1.23</dwc-api.version>
+        <dwc-api.version>1.28-SNAPSHOT</dwc-api.version>
         <elasticsearch.version>7.4.2</elasticsearch.version>
         <fastutil.version>8.3.0</fastutil.version>
         <gbif-api.version>0.99</gbif-api.version>
