Adds a first port of the terse results of the legacy API. Fixes builds and #729

--- a/webservice/src/main/resources/config.yaml
+++ b/webservice/src/main/resources/config.yaml
@@ -5,6 +5,7 @@ logging:
     "org.eclipse.jetty.servlet": WARN
     "life.catalogue": INFO
     "life.catalogue.db.mapper": DEBUG
+    "life.catalogue.db.legacy": DEBUG
   appenders:
     - type: console
 db:
