--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -221,6 +221,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
 
         <!-- commons -->
         <dependency>
