--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -20,10 +20,20 @@
 			</resource>
 		</resources>
 		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
-			</testResource>
+          <testResource>
+              <directory>src/test/resources</directory>
+              <filtering>true</filtering>
+              <includes>
+                <include>*.yaml</include>
+              </includes>
+          </testResource>
+          <testResource>
+            <directory>src/test/resources</directory>
+            <filtering>false</filtering>
+            <excludes>
+              <exclude>*.yaml</exclude>
+            </excludes>
+          </testResource>
 		</testResources>
 	</build>
 
