--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -62,6 +62,21 @@
 			<artifactId>mybatis</artifactId>
 		</dependency>
 
+      <!-- mapdb & kryo -->
+      <!-- we use kryo to serialize data into binary which is > 10 times faster than jackson even with smile -->
+      <dependency>
+        <groupId>org.mapdb</groupId>
+        <artifactId>mapdb</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>com.esotericsoftware</groupId>
+        <artifactId>kryo</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>de.javakaffee</groupId>
+        <artifactId>kryo-serializers</artifactId>
+      </dependency>
+
 		<!-- unicode, transliterations -->
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
