Fix authorship search, see #864

--- a/dao/src/main/resources/life/catalogue/es/ddl/es-settings.json
+++ b/dao/src/main/resources/life/catalogue/es/ddl/es-settings.json
@@ -87,6 +87,13 @@
 						"asciifolding"
 					]
 				},
+        "standard_ascii": {
+          "tokenizer": "standard",
+          "filter": [
+            "lowercase",
+            "asciifolding"
+          ]
+        },
 				"sciname_autocomplete_indextime": {
 					"char_filter": "sciname_char_filter",
 					"tokenizer": "sciname_autocomplete_indextime",
