--- a/webservice/src/main/resources/config.yaml
+++ b/webservice/src/main/resources/config.yaml
@@ -11,7 +11,7 @@ logging:
 db:
   # set host to null to use the embedded pg server
   host: ${db.host}
-  port: 5432
+  port: ${db.port}
   database: ${db.database}
   user: ${db.user}
   password: ${db.password}
