Use maven db port var for admin db test connections

--- a/webservice/src/test/resources/config-test.yaml
+++ b/webservice/src/test/resources/config-test.yaml
@@ -19,6 +19,7 @@ db:
   password: ${db.password}
 adminDb:
   database: postgres
+  port: ${db.port}
   user: ${db.user}
   password: ${db.password}
 normalizer:
