--- a/webservice/src/test/resources/config-test.yaml
+++ b/webservice/src/test/resources/config-test.yaml
@@ -54,3 +54,8 @@ jwtKey: 3254e6rftgbzg6tz73254e6rftgbzg6tz73254e6rftgbzg6tz7
 img:
   repo: ${img.repo}
   archive: ${img.repo}/archive
+release:
+  since: 2020-12-01T01:01:01
+  map:
+    10: A
+    11: B
