--- a/webservice/src/main/resources/config.yaml
+++ b/webservice/src/main/resources/config.yaml
@@ -25,6 +25,7 @@ db:
 normalizer:
   scratchDir: /tmp/col/scratch
   archiveDir: /tmp/col/archives
+downloads: "http://localhost"
 client:
   timeout: 10000ms
   connectionTimeout: 5000ms
