--- a/webservice/src/test/resources/config-test.yaml
+++ b/webservice/src/test/resources/config-test.yaml
@@ -24,7 +24,7 @@ adminDb:
 normalizer:
   scratchDir: /tmp/colplus/scratch
   archiveDir: /tmp/colplus/archives
-downloads: "http://localhost"
+downloadURI: "http://localhost"
 client:
   timeout: 10000ms
   connectionTimeout: 10000ms
