--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -110,6 +110,10 @@
             <groupId>org.catalogueoflife</groupId>
             <artifactId>dao</artifactId>
         </dependency>
+        <dependency>
+          <groupId>org.gbif</groupId>
+          <artifactId>dwca-io</artifactId>
+        </dependency>
 
         <!-- DB -->
         <dependency>
