Allow for snaoshot elastic search versions

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ dao/127.0.0.1/
 dao/dataset/
 webservice/graphs/
 webservice/localhost/
+webservice/config-*.yaml
 
 **/.DS_Store
 **/.project
 **/.classpath
 **/.settings/
 **/bin/
+
