--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -112,6 +112,10 @@
         </dependency>
         <dependency>
           <groupId>org.gbif</groupId>
+          <artifactId>dwc-api</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.gbif</groupId>
           <artifactId>dwca-io</artifactId>
         </dependency>
 
