--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -344,7 +344,22 @@
 
     <build>
         <defaultGoal>compile exec:java</defaultGoal>
-
+        <resources>
+          <resource>
+            <directory>src/resources</directory>
+            <filtering>false</filtering>
+            <excludes>
+              <exclude>*.yaml</exclude>
+            </excludes>
+          </resource>
+          <resource>
+            <directory>src/resources</directory>
+            <filtering>true</filtering>
+            <includes>
+              <include>*.yaml</include>
+            </includes>
+          </resource>
+        </resources>
 		<testResources>
 			<testResource>
 				<directory>src/test/resources</directory>
