--- a/webservice/src/test/resources/config-test.yaml
+++ b/webservice/src/test/resources/config-test.yaml
@@ -25,6 +25,8 @@ normalizer:
   scratchDir: /tmp/colplus/scratch
   archiveDir: /tmp/colplus/archives
 downloadURI: "http://localhost"
+portalURI: "http://localhost"
+apiURI: "http://localhost"
 client:
   timeout: 10000ms
   connectionTimeout: 10000ms
