Add more CSL styles and use latest citeproc which is a native java version

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -84,6 +84,10 @@
 		</dependency>
 
 		<!-- other -->
+        <dependency>
+          <groupId>org.jbibtex</groupId>
+          <artifactId>jbibtex</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>com.univocity</groupId>
 			<artifactId>univocity-parsers</artifactId>
