--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -249,6 +249,10 @@
 
     <!-- other -->
     <dependency>
+      <groupId>org.simplejavamail</groupId>
+      <artifactId>simple-java-mail</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
     </dependency>
