--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -85,6 +85,10 @@
 
 		<!-- other -->
         <dependency>
+          <groupId>org.simplejavamail</groupId>
+          <artifactId>simple-java-mail</artifactId>
+        </dependency>
+        <dependency>
           <groupId>org.jbibtex</groupId>
           <artifactId>jbibtex</artifactId>
         </dependency>
