--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -114,6 +114,10 @@
       <artifactId>dao</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.catalogueoflife</groupId>
+      <artifactId>doi</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.gbif</groupId>
       <artifactId>dwc-api</artifactId>
     </dependency>
