Full DataCite service implementation with custom enum serdes

--- a/doi/pom.xml
+++ b/doi/pom.xml
@@ -41,6 +41,12 @@
 
     <!-- TEST SCOPE -->
     <dependency>
+      <groupId>org.catalogueoflife</groupId>
+      <artifactId>api</artifactId>
+      <classifier>tests</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
