Update & delete DOIs when releases or entire projects get deleted

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -47,6 +47,10 @@
 			<groupId>org.catalogueoflife</groupId>
 			<artifactId>parser</artifactId>
 		</dependency>
+        <dependency>
+          <groupId>org.catalogueoflife</groupId>
+          <artifactId>doi</artifactId>
+        </dependency>
 
 		<!-- mybatis / DB -->
 		<dependency>
