--- a/doi/pom.xml
+++ b/doi/pom.xml
@@ -39,6 +39,12 @@
       <artifactId>jersey-common</artifactId>
     </dependency>
 
+    <!-- mail -->
+    <dependency>
+      <groupId>org.simplejavamail</groupId>
+      <artifactId>simple-java-mail</artifactId>
+    </dependency>
+
     <!-- TEST SCOPE -->
     <dependency>
       <groupId>org.catalogueoflife</groupId>
