--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -381,6 +381,7 @@
         <excludes>
           <exclude>config-test.yaml</exclude>
           <exclude>gbifAuth.yaml</exclude>
+          <exclude>datacite.yaml</exclude>
         </excludes>
       </testResource>
       <testResource>
@@ -389,6 +390,7 @@
         <includes>
           <include>config-test.yaml</include>
           <include>gbifAuth.yaml</include>
+          <include>datacite.yaml</include>
         </includes>
       </testResource>
     </testResources>
